# callgraph4rs

./: .gitignore  Cargo.toml  README.md  build.rs  rust-toolchain.toml
.github/workflows/: rust.yml
rustc_compat/: Cargo.toml  build.rs
rustc_compat/src/: cargo_plugin.rs  lib.rs  plugin.rs  rustc_plugin.rs
src/: args.rs  callgraph.rs  ccg.rs  constraint_utils.rs  context.rs  driver.rs  lib.rs  mir_utils.rs  mono.rs  process.rs  timer.rs  utils.rs
src/callgraph/: analysis.rs  controlflow.rs  fmt.rs  function.rs  mod.rs  origin.rs  public_exposure.rs  rq2.rs  summary.rs  types.rs  utils.rs
src/callgraph/resolution/: address_taken.rs  dyn_trait.rs  fnptr.rs  helpers.rs  mod.rs
test_callgraph/: Cargo.toml  README.md  fetch_crate.sh
test_callgraph/test1/: Cargo.toml  output.txt  rust-toolchain.toml
test_callgraph/test1/src/: dyn_example.rs  external_trait_example.rs  fn_pointer_example.rs  fn_trait_example.rs  main.rs  manual_serde.rs  ultra_simple_serde.rs
test_callgraph/test2/: Cargo.toml
test_callgraph/test2/src/: main.rs
testdata/: fetch_crate.sh
testdata/test1/: Cargo.toml
testdata/test1/src/: dyn_example.rs  external_trait_example.rs  fn_pointer_example.rs  fn_trait_example.rs  main.rs
testdata/test2/src/: main.rs
tests/: async_stream_regression.rs  callers_edge_cases.rs  closure_higher_order_regression.rs  drop_regression.rs  dyn_fn_wrapper_regression.rs  field_sensitive_regression.rs  fnptr_cfg_regression.rs  fnptr_signature_regression.rs  producer_consumer_regression.rs  public_exposure_regression.rs  resolution_module_test.rs  testdata_regressions.rs
tests/common/: mod.rs
