[package]
name = "cg4rs"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
  "rustc_compat",
]

[dependencies]
rustc_compat = {path = "rustc_compat"}
ansi_term = "0.12.1"
clap = {version = "4", features = ["derive"]}
dotenvy = "0.15.7"
itertools = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = "0.3"
owo-colors = {workspace = true}
bit-vec = "0.8.0"
html-escape = {workspace = true}
lazy_static = "1.4.0"
chrono = "0.4"
anyhow = "1"
tokio = { version = "1.0", features = ["full"] }
libc = "0.2"

[package.metadata.rust-analyzer]
rustc_private = true

[workspace.dependencies]
itertools = "0.14.0"
serde = {version = "1", features = ["derive"]}
serde_json = "1.0"
tracing = "0.1.41"
owo-colors = "4.2.0"
html-escape = "0.2.13"
bit-vec = "0.8.0"
