[package]
name = "cg4rs"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
  "rustc_compat",
]

[[bin]]
name = "call-cg4rs"
path = "src/bin/call-cg4rs.rs"

[[bin]]
name = "cargo-cg4rs"
path = "src/bin/cargo-cg4rs.rs"

[[bin]]
name = "cg4rs"
path = "src/bin/cg4rs.rs"

[dependencies]
ansi_term.workspace = true
anyhow.workspace = true
bit-vec.workspace = true
chrono.workspace = true
clap.workspace = true
dotenvy.workspace = true
html-escape.workspace = true
itertools.workspace = true
lazy_static.workspace = true
libc.workspace = true
owo-colors.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rustc_compat = {path = "rustc_compat"}

[package.metadata.rust-analyzer]
rustc_private = true

[workspace.dependencies]
ansi_term = "0.12.1"
anyhow = {version = "1", features = ["backtrace"]}
bit-vec = "0.8.0"
cargo_metadata = "0.22.0"
cargo-util-schemas = "0.8.2"
chrono = "0.4"
clap = {version = "4", features = ["derive"]}
dotenvy = "0.15.7"
html-escape = "0.2.13"
itertools = "0.14.0"
lazy_static = "1.4.0"
libc = "0.2"
owo-colors = "4.2.0"
serde = {version = "1", features = ["derive"]}
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
toml = "0.9.5"
tracing = "0.1.41"
tracing-subscriber = "0.3"
