[package]
edition = "2021"
name = "rustc_compat"
version = "0.1.0"

[package.metadata.rust-analyzer]
rustc_private = true

[dependencies]
cargo_metadata = "0.22.0"
cargo-util-schemas = "0.8.2"
rustc_tools_util = "0.4.0"
serde = {workspace = true}
serde_json = "1"
tracing = {workspace = true}


[dev-dependencies]
anyhow = {version = "1", features = ["backtrace"]}

[build-dependencies]
toml = "0.9.5"
