[package]
edition = "2021"
name = "rustc_compat"
version = "0.1.0"

[package.metadata.rust-analyzer]
rustc_private = true

[dependencies]
cargo_metadata.workspace = true
cargo-util-schemas.workspace = true
rustc_tools_util = "0.4.0"
serde.workspace = true
serde_json.workspace = true
tracing = {workspace = true}


[dev-dependencies]
anyhow.workspace = true

[build-dependencies]
toml.workspace = true
